--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </li>
         </ul>
         <form class="form-inline mt-2 mt-md-0">
-          <audio src="Over.mp3" id="myaudio" controls="controls" loop="true" hidden="true">
+          <audio src="Over.mp3" id="myaudio" controls="controls" autoplay loop="true" hidden="true">
           </audio>
           <input type="button" onclick="autoPlay()" value="播放" />
           <input type="button" onclick="closePlay()" value="關閉" />
