--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img class="rounded-circle"
-            src="https://img.moegirl.org/common/8/8a/%E5%81%87%E9%9D%A2%E9%AA%91%E5%A3%ABDrive%E6%B5%B7%E6%8A%A5.jpg"
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQBGGiP3Lt7a4R4WdzXyz6oWFPpKFJ7bNAU5g&usqp=CAU"
             alt="Generic placeholder image" width="140" height="140">
           <h2>Drive</h2>
           <p>--泊進之介（とまり・しんノすけ）--<br>假面騎士Drive、假面騎士超Dead Heat Drive、假面騎士Zero Drive、假面騎士Dead Heat Drive的變身者。
